--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-pdf/renderer": "^3.1.14",
     "@tremor/react": "^3.11.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
